# shell-utils

./: .buildinfo  .bumpversion.cfg  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.rst  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.md  run.py  search.html  searchindex.js  setup.cfg  setup.py  shell_utils.html  tox.ini
.github/: ISSUE_TEMPLATE.md
.pytest_cache/v/cache/: lastfailed
.vendor/flake8-3.5.0.dist-info/: RECORD
.vendor/pew-1.1.2.dist-info/: RECORD
.vendor/pip-9.0.1.dist-info/: RECORD
.vendor/pipenv-9.0.1.dist-info/: DESCRIPTION.rst  METADATA  RECORD  metadata.json
.vendor/pycodestyle-2.3.1.dist-info/: RECORD
.vendor/pyflakes-1.6.0.dist-info/: RECORD
.vendor/setuptools-38.2.5.dist-info/: RECORD
.vendor/virtualenv-15.1.0.dist-info/: RECORD
.vendor/virtualenv_clone-0.2.6.dist-info/: RECORD
_modules/: index.html
_modules/shell_utils/: cli.html  shell_utils.html
_sources/: index.rst.txt  modules.rst.txt  shell_utils.rst.txt
_static/: documentation_options.js
docs/: .gitignore  Makefile  conf.py  make.bat
shell_utils/: __init__.py  cli.py  notify.py  runner.py  shell_utils.py
tests/: __init__.py  test_shell_utils.py
