[metadata]
name = shell-utils
version = 0.5.0
description = Some helpers to make interacting with the shell easier
long_description = file: README.rst
author = Stephan Fitzpatrick
author_email = knowsuchagency@gmail.com
url = https://github.com/knowsuchagency/shell-utils
license = MIT license
keywords = shell-utils
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
test_suite = tests
setup_requires = pytest-runner

[flake8]
exclude = docs

[aliases]
test = pytest
